--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap');
 
 :root{
-    --mainTextColor:#000;
-    --secondaryTextColor:(51 51 51);
-    --mainLinkColor:#0da2b8;
-    --mainBorderColor:rgb(218, 218, 218);
-    --mainBgColor:rgb(249, 250,251);
+    --mainTextColor-light:#000;
+    --secondaryTextColor-light:rgb(51 51 51);
+    --mainLinkColor-light:#0da2b8;
+    --mainBorderColor-light:rgb(218, 218, 218);
+    --mainBgColor-light:rgb(249, 250,251);
+
+    --mainTextColor-dark:#fff;
+    --secondaryTextColor-dark:#adb0b1;
+    --mainLinkColor-dark:rgb(30, 190,214);
+    --mainBorderColor-dark:#2b3031;
+    --mainBgColor-dark:#131415;
+
+    --mainTextColor:var(--mainTextColor-dark);
+    --secondaryTextColor:var(--secondaryTextColor-dark);
+    --mainLinkColor:var(--mainLinkColor-dark);
+    --mainBorderColor:var(--mainBorderColor-dark);
+    --mainBgColor:var(--mainBgColor-dark);
+
 }
 *{
     font-family: Readex Pro;
@@ -32,4 +45,53 @@ a{
 .section-page{
     padding-left: 1 em;
     padding-bottom: 1rem;
+}
+#hero-section{
+    display: flex;
+    align-items: center;
+    gap:4em;
+}
+#bio{
+    font-weight: 300;
+}
+#user-name{
+    font-size: 2em;
+    line-height: 1em;
+}
+#profile-pic{
+    border-radius: 50%;
+    width:150px;
+    height:150px;
+    object-fit: cover
+
+}
+#email{
+    color: var(--mainTextColor);
+}
+#social-lists{
+    display: flex;
+    justify-content:space-between;
+    column-gap:1em ;
+    flex-wrap:wrap
+}
+#social-lists a{
+   font-size: 0.9em;
+   color: var(--mainTextColor);
+   transition:0.3s;
+}
+#social-lists a:hover{
+    color:var(--mainLinkColor)
+}
+#tech-stack-wrapper{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 1em;
+    font-size: 00.9em;
+}
+.card-tech-stack{
+    border: 1px solid var(--mainBorderColor);
+    border-radius: 5px;
+    padding: 0.5em 1em;
+    align-items: center;
+
 }
