--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,7 @@ a{
 #container-main{
     max-width: 700px;
     margin:0 auto;
+    padding: 1em;
 }
 .section-page{
     padding-left: 1 em;
@@ -70,7 +71,7 @@ a{
 }
 #social-lists{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     column-gap:1em ;
     flex-wrap:wrap
 }
@@ -94,4 +95,46 @@ a{
     padding: 0.5em 1em;
     align-items: center;
 
+}
+.work-history-card{
+    border-left: 1px solid var(--mainBorderColor);
+    margin-top:3em;
+    margin-bottom: 3em;
+    padding-left: 2em;
+}
+.line-break{
+    background-color: var(--mainBorderColor-dark);
+    height: 1px;
+}
+.project-card{
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-top: 1px solid var(--mainBorderColor);
+}
+.project-card a{
+    color:var(--mainTextColor);
+    transition:0.3s;
+}
+.project-card a:hover{
+    color: var(--mainLinkColor);
+}
+@media(max-width:600px){
+    #hero-section{
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
+    }
+    #profile-pic{
+        width:200px;
+        height: 200px;
+    }
+    .section-page{
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+    #work-history-card{
+        border-left: none;
+        padding-left: 0;
+    }
+    
 }
