--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,3 +145,19 @@ a{
     }
     
 }
+.project-img{
+    max-width:600px;
+    border-radius: 5px;
+    border:2px solid #0da2b8
+}
+.football{
+    border: none;
+    background: white;
+}
+@media(max-width:600px){
+    .project-img{
+        width:100%;
+        height: auto;
+        
+    }
+}
